# FlappyBirdCpp

./: CMakeLists.txt  README.md
assets/: atlas.txt
src/: Engine.cpp  Engine.h  FlappyBirdGame.cpp  FlappyBirdGame.h  Game.cpp  Scene.cpp  Scene.h  ecs.h  helpers.h
src/components/: BirdController.cpp  BirdController.h  BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  CounterRenderer.cpp  CounterRenderer.h  DelayedCallback.cpp  DelayedCallback.h  KeyTrigger.cpp  KeyTrigger.h  PipeHeightRandomizer.cpp  PipeHeightRandomizer.h  PositionRecycler.cpp  PositionRecycler.h  PositionResetter.cpp  PositionResetter.h  Renderer.h  Rigidbody.cpp  Rigidbody.h  ScoreManager.cpp  ScoreManager.h  SpriteAnimator.cpp  SpriteAnimator.h  SpriteRenderer.cpp  SpriteRenderer.h  TiledRenderer.cpp  TiledRenderer.h
src/processors/: PhysicsProcessor.cpp  PhysicsProcessor.h  RenderProcessor.cpp  RenderProcessor.h
src/rendering/: Image.cpp  Image.h  Screen.h  Sprite.cpp  Sprite.h  SpriteFactory.cpp  SpriteFactory.h  Surface.cpp  Surface.h
src/textures/: SpriteList.h  atlas.c
src/utilities/: Bounds.cpp  Bounds.h  LoopAnimator.cpp  LoopAnimator.h  UniformRNG.cpp  UniformRNG.h  Vector2.cpp  Vector2.h
